--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>GenLearn - AI Learning Platform</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="פלטפורמת למידה מבוססת בינה מלאכותית - GenLearn">
+  <link rel="icon" type="image/svg+xml" href="icon.svg">
+  <link rel="icon" type="image/x-icon" href="icon.svg">
 </head>
 <body>
   <app-root></app-root>
